# Voice-Conductor

./: .gitignore  README.md  pyproject.toml  showcase.ipynb  voice_synth_showcase.ipynb
VoiceConductor.egg-info/: PKG-INFO  requires.txt
demo_files/: config-help.md  demo-voice_synth.config.jsonc  guided-demo.pcm
docs/: general.md  mic-setup.md  readme.md
docs/.obsidian/: app.json  graph.json  workspace.json
examples/custom_provider_demo/: README.md  ascii_song_demo.py  custom_provider_demo.py  main.py  midi_to_ascii.py  song.py  song2.py  song3.py  song4.py  song5.py
examples/simple_ui_wrapper/: simple_ui_wrapper.py
tests/: test_api_cache.py  test_config_api.py  test_custom_provider_demo.py  test_demo_provider.py  test_devices.py  test_kokoro.py  test_manager.py  test_phrase_cache.py  test_playback.py  test_provider_api_cache.py  test_router.py  test_showcase_helpers.py  test_types.py  test_voice_keys.py  test_windows_provider.py
voice_conductor/: __init__.py  _showcase_helpers.py  config.py  exceptions.py  manager.py  phrase_cache.py  voice_keys.py
voice_conductor.egg-info/: PKG-INFO  SOURCES.txt
voice_conductor/audio/: __init__.py  devices.py  playback.py  router.py
voice_conductor/providers/: __init__.py  azure.py  base.py  demo.py  elevenlabs.py  kokoro.py  registry.py  windows.py
voice_synth/: __init__.py  _showcase_helpers.py  api_cache.py  config.py  config_registry.py  exceptions.py  manager.py  phrase_cache.py  types.py
voice_synth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
voice_synth/audio/: __init__.py  devices.py  (+2 more)
(+46 files in other folders)
